update container name

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,6 +2,10 @@
     "build": {
         "dockerfile": "Dockerfile"
     },
+    "runArgs": [
+        "--name",
+        "devcontainer-ocaml"
+    ],
     "remoteUser": "opam",
     "customizations": {
         "vscode": {
